Updated data science notebooks

--- a/Probablity-7.ipynb
+++ b/Probablity-7.ipynb
@@ -29,7 +29,45 @@
    "source": [
     "Probablity Distribution-it describes how the probablities of different outcomes are distributed over the sample space of a random variable \n",
     "1.Disrete Probablity DIstribution\n",
-    "2.Continous Probablity Distribution"
+    "2.Continous Probablity Distribution\n",
+    "\n",
+    "\n",
+    "Agar hame sirf ye dekhna hai ki data kitne baar occur hua hai then we use probablity distribution .\n",
+    "but if we want to know ki future me is data ke occur hone ke kine chances hai then we use probablity distribution function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3e6225",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "probablity Distribution Functions is a mathematical function that gives the probablities of occurrence of different possible outcomes of an experiment\n",
+    "p(x)=y\n",
+    "its type are\n",
+    "1.probablity density function(PDF)-used when data is continous\n",
+    "2.probablity mass function(PMF)-when data is discreet\n",
+    "3.cumulative Density Function(CDF)-kitna data us data ke aage yaa phir peeche hai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b3912c3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Normal Distribution/Gaussian Distribution-it is a probablity distribution function that is symmetric about mean,showing that data near mean are more frequent in occurences than data far from mean.bell shaped graph\n",
+    "Standart Normal Distribution/Z distribution/Z score-special case of normal distribution were mean is 0 and standard deviation is 1"
    ]
   }
  ],
