Updated data science notebooks

--- a/Machine Learning/OneHotEncoding-7.ipynb
+++ b/Machine Learning/OneHotEncoding-7.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3bfa40c2",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b3c0dfb8",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "4             1.0         Urban           Y  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ed34d712",
    "metadata": {},
    "outputs": [
@@ -196,50 +196,6 @@
       "text/plain": [
        "Loan_ID               0\n",
        "Gender               13\n",
-       "Married               3\n",
-       "Dependents           15\n",
-       "Education             0\n",
-       "Self_Employed        32\n",
-       "ApplicantIncome       0\n",
-       "CoapplicantIncome     0\n",
-       "LoanAmount           22\n",
-       "Loan_Amount_Term     14\n",
-       "Credit_History       50\n",
-       "Property_Area         0\n",
-       "Loan_Status           0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "887ce144",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset[\"Gender\"].fillna(dataset[\"Gender\"].mode()[0],inplace=True)  #categorical data hence we have used mode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "66d369dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Loan_ID               0\n",
-       "Gender                0\n",
        "Married               3\n",
        "Dependents           15\n",
        "Education             0\n",
@@ -265,7 +221,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "887ce144",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sweta Kumari\\AppData\\Local\\Temp\\ipykernel_21872\\3997741326.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  dataset[\"Gender\"].fillna(dataset[\"Gender\"].mode()[0],inplace=True)  #categorical data hence we have used mode\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset[\"Gender\"].fillna(dataset[\"Gender\"].mode()[0],inplace=True)  #categorical data hence we have used mode"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
+   "id": "66d369dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Loan_ID               0\n",
+       "Gender                0\n",
+       "Married               3\n",
+       "Dependents           15\n",
+       "Education             0\n",
+       "Self_Employed        32\n",
+       "ApplicantIncome       0\n",
+       "CoapplicantIncome     0\n",
+       "LoanAmount           22\n",
+       "Loan_Amount_Term     14\n",
+       "Credit_History       50\n",
+       "Property_Area         0\n",
+       "Loan_Status           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6932d7dd",
    "metadata": {},
    "outputs": [
@@ -273,7 +287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Sweta Kumari\\AppData\\Local\\Temp\\ipykernel_30008\\1830359238.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\Sweta Kumari\\AppData\\Local\\Temp\\ipykernel_21872\\1830359238.py:1: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -289,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a0ea1262",
    "metadata": {},
    "outputs": [
@@ -420,7 +434,7 @@
        "[614 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "2c79153d",
    "metadata": {},
    "outputs": [],
@@ -453,25 +467,337 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "862fafdb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
-       "\twith 1228 stored elements and shape (614, 4)>"
+       "array([[0., 1., 1., 0.],\n",
+       "       [0., 1., 0., 1.],\n",
+       "       [0., 1., 0., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 0., 1.],\n",
+       "       [0., 1., 0., 1.],\n",
+       "       [1., 0., 1., 0.]], shape=(614, 4))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ohe= OneHotEncoder()\n",
-    "ohe.fit_transform(en_data)"
+    "ar=ohe.fit_transform(en_data).toarray()\n",
+    "ar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9ddfcbdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender_Female</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "      <th>Married_No</th>\n",
+       "      <th>Married_Yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>614 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender_Female  Gender_Male  Married_No  Married_Yes\n",
+       "0              0.0          1.0         1.0          0.0\n",
+       "1              0.0          1.0         0.0          1.0\n",
+       "2              0.0          1.0         0.0          1.0\n",
+       "3              0.0          1.0         0.0          1.0\n",
+       "4              0.0          1.0         1.0          0.0\n",
+       "..             ...          ...         ...          ...\n",
+       "609            1.0          0.0         1.0          0.0\n",
+       "610            0.0          1.0         0.0          1.0\n",
+       "611            0.0          1.0         0.0          1.0\n",
+       "612            0.0          1.0         0.0          1.0\n",
+       "613            1.0          0.0         1.0          0.0\n",
+       "\n",
+       "[614 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(ar,columns=['Gender_Female','Gender_Male','Married_No','Married_Yes'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3feb7f44",
+   "metadata": {},
+   "source": [
+    "Solution: drop='first'\n",
+    "By dropping the first category (e.g., \"Red\"), you get:\n",
+    "\n",
+    "Color\tGreen\tBlue\n",
+    "Red\t0\t0\n",
+    "Green\t1\t0\n",
+    "Blue\t0\t1\n",
+    "\n",
+    "The model infers the dropped category (\"Red\") when both Green and Blue are 0.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2c1cf2e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [1., 1.],\n",
+       "       [1., 1.],\n",
+       "       ...,\n",
+       "       [1., 1.],\n",
+       "       [1., 1.],\n",
+       "       [0., 0.]], shape=(614, 2))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ohe= OneHotEncoder(drop=\"first\")\n",
+    "ar=ohe.fit_transform(en_data).toarray()\n",
+    "ar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9988c590",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender_Male</th>\n",
+       "      <th>Married_Yes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>609</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>611</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>612</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>613</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>614 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender_Male  Married_Yes\n",
+       "0            1.0          0.0\n",
+       "1            1.0          1.0\n",
+       "2            1.0          1.0\n",
+       "3            1.0          1.0\n",
+       "4            1.0          0.0\n",
+       "..           ...          ...\n",
+       "609          0.0          0.0\n",
+       "610          1.0          1.0\n",
+       "611          1.0          1.0\n",
+       "612          1.0          1.0\n",
+       "613          0.0          0.0\n",
+       "\n",
+       "[614 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(ar,columns=['Gender_Male','Married_Yes'])"
    ]
   }
  ],
